Frontend fixes  - e.g. implementing Bootstrap where it lacked,  - modals review and fixes (aligning items vertically in center),

--- a/static/css/accounts/style.css
+++ b/static/css/accounts/style.css
@@ -12,6 +12,11 @@
     margin: auto;
 }
 
+
+label.form-label.modal-style{
+    margin: 0px;
+}
+
 /*breadcrumb styling*/
 ol.breadcrumb{
     margin: 0px;
